--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,4 +1,81 @@
+/* Inter font */
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
 .hero {
-  height: 60.5625rem;
-  background-color: var(--Primary-Navy, #001a52);
+  display: flex;
+  height: 47rem;
+  align-items: flex-start;
+  background-color: #001a52;
+}
+
+.hero-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  padding: 5rem;
+}
+
+.hero-text-container {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+.hero-text {
+  display: flex;
+  width: 27.125rem;
+  height: 18.875rem;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-shrink: 0;
+}
+
+.hero-title {
+  color: #fff;
+  font-family: Inter;
+  font-size: 5rem;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 85%; /* 4.25rem */
+  letter-spacing: -0.2rem;
+}
+
+.date-and-arrow {
+  display: flex;
+  flex-direction: row;
+}
+
+.hero-date {
+  color: #e51236;
+  font-family: Inter;
+  font-size: 6.25rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  letter-spacing: -0.5rem;
+}
+
+.arrow-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+svg {
+  flex-shrink: 0;
+}
+
+.hero-icons {
+  display: grid;
+  grid-template-columns: repeat(3, 9rem);
+  grid-template-rows: repeat(4, 9rem);
+  gap: 0.5rem;
+}
+
+.square {
+  background-color: #d9d9d9;
 }
