--- a/src/components/LandingForm.css
+++ b/src/components/LandingForm.css
@@ -37,3 +37,22 @@ label {
 span {
   color: #e51236;
 }
+
+.input-container {
+  display: flex;
+  align-items: center;
+  gap: 2.5rem;
+  align-self: stretch;
+}
+
+input {
+  display: flex;
+  width: 18.48rem;
+  height: 3rem;
+  border-radius: 0.25rem;
+  border: 1px solid #f2f2f2;
+  background: #f2f2f2;
+  padding: 0.5rem;
+  font-size: 1rem;
+  margin-top: 0;
+}
