--- a/src/components/LandingForm.css
+++ b/src/components/LandingForm.css
@@ -56,3 +56,25 @@ input {
   font-size: 1rem;
   margin-top: 0;
 }
+
+.checkbox-container {
+  display: flex;
+  height: 3.75rem;
+  gap: 0.625rem;
+  align-items: baseline;
+}
+
+#consent {
+  width: 1.19963rem;
+  height: 1.1875rem;
+  border: 1px solid #4f4f4f;
+}
+
+#conste-label {
+  font-size: 1rem;
+  color: #4f4f4f;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.75rem;
+}
