--- a/src/components/LandingForm.css
+++ b/src/components/LandingForm.css
@@ -70,11 +70,29 @@ input {
   border: 1px solid #4f4f4f;
 }
 
-#conste-label {
+#consent-label {
   font-size: 1rem;
   color: #4f4f4f;
   font-size: 1.125rem;
   font-style: normal;
   font-weight: 400;
   line-height: 1.75rem;
+}
+
+.button-container {
+  display: flex;
+  gap: 2rem;
+  margin-top: 1.5rem;
+}
+
+button {
+  border-radius: 62.4375rem;
+  background: #001a52;
+  color: #fff;
+  font-family: "IBM Plex Mono";
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1rem;
+  padding: 0.75rem 1.5rem;
 }
