--- a/src/components/LandingForm.css
+++ b/src/components/LandingForm.css
@@ -61,6 +61,15 @@ span {
   aspect-ratio: 1/1;
 }
 
+.label-choice-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  height: 2rem;
+}
+
 .input-container {
   display: flex;
   align-items: center;
