--- a/src/components/LandingInfo.css
+++ b/src/components/LandingInfo.css
@@ -45,16 +45,8 @@
   margin-bottom: 0;
 }
 
-.landing-info-grid {
-  display: grid;
-  width: 50%;
-  grid-template-columns: repeat(3, 9rem);
-  grid-template-rows: repeat(1, 9rem);
-  align-self: end;
-  gap: 0.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.square {
-  background-color: #bdbdbd;
+.landing-info-icons {
+  display: flex;
+  align-items: center;
+  gap: 0.375rem;
 }
