--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -10,26 +10,26 @@ footer {
 
 .footer-content {
   display: flex;
-  width: 90rem;
+  margin: 0 5rem 0 5rem;
   padding: 2.5rem 0rem;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .upper-section {
   display: flex;
-  align-items: center;
-  gap: 18.75rem;
-  align-self: stretch;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .icon-logos {
   display: flex;
   width: 44.375rem;
-  padding: 0rem 7.5rem;
+  padding: 0;
   flex-direction: column;
+  align-items: flex-start;
   justify-content: center;
-  align-items: center;
   gap: 1rem;
 }
 
@@ -39,7 +39,8 @@ footer {
   height: 6.8125rem;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  text-align: left;
 }
 
 .footer-link-text {
