--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,5 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  /* === COLORS === */
+  --Primary-White: #fff;
+  --Text-Dark-Grey: #4f4f4f;
+
+  /* === FONTS === */
+  --Button-Font-Family: Inter;
+  --Button-Size: 1rem;
+  --Button-Font-weight: 500;
 }
