Refactor styles to use CSS variables for colors and fonts in Header, Hero, and LandingForm components

--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -22,7 +22,7 @@ nav {
 .nav,
 a {
   color: var(--Text-Dark-Grey);
-  font-family: var(--Button-Font-Family);
+  font-family: var(--Font-Inter);
   font-size: var(--Button-Size);
   font-style: normal;
   font-weight: var(--Button-Font-weight);
