--- a/src/components/sections/LandingForm.css
+++ b/src/components/sections/LandingForm.css
@@ -1,6 +1,3 @@
-/* IBM Plex Mono font */
-@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-
 .landing-form {
   height: 51rem;
 }
@@ -11,9 +8,8 @@
 }
 
 h1 {
-  color: #001a52;
-  font-feature-settings: "liga" off, "clig" off;
-  font-family: "IBM Plex Mono";
+  color: var(--Primary-Navy);
+  font-family: var(--Font-IBM-Plex-Mono);
   font-size: 2rem;
   font-style: normal;
   font-weight: 700;
@@ -24,8 +20,8 @@ h1 {
 p,
 input,
 label {
-  color: #001a52;
-  font-family: "IBM Plex Mono";
+  color: var(--Primary-Navy);
+  font-family: var(--Font-IBM-Plex-Mono);
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 400;
@@ -34,8 +30,8 @@ label {
 }
 
 #conditions-policy {
-  color: #4f4f4f;
-  font-family: "IBM Plex Mono";
+  color: var(--Text-Dark-Grey);
+  font-family: var(--Font-IBM-Plex-Mono);
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 400;
@@ -44,7 +40,7 @@ label {
 }
 
 span {
-  color: #e51236;
+  color: var(--Primary-Red);
 }
 
 .register-container {
@@ -55,8 +51,8 @@ span {
 }
 
 #register-text {
-  color: #e51236;
-  font-family: "IBM Plex Mono";
+  color: var(--Primary-Red);
+  font-family: var(--Font-IBM-Plex-Mono);
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 600;
@@ -91,8 +87,8 @@ input {
   width: 18.48rem;
   height: 3rem;
   border-radius: 0.25rem;
-  border: 1px solid #f2f2f2;
-  background: #f2f2f2;
+  border: 1px solid var(--Grey);
+  background: var(--Grey);
   padding: 0.5rem;
   font-size: 1rem;
   margin-top: 0;
@@ -108,12 +104,12 @@ input {
 #consent {
   width: 1.19963rem;
   height: 1.1875rem;
-  border: 1px solid #4f4f4f;
+  border: 1px solid var(--Text-Dark-Grey);
 }
 
 #consent-label {
   font-size: 1rem;
-  color: #4f4f4f;
+  color: var(--Text-Dark-Grey);
   font-size: 1.125rem;
   font-style: normal;
   font-weight: 400;
@@ -129,7 +125,7 @@ input {
 button {
   border-radius: 62.4375rem;
   background: #001a52;
-  color: #fff;
+  color: var(--Primary-White);
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 500;
