--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 * {
   margin: 0;
@@ -10,10 +11,15 @@
   /* === COLORS === */
   --Primary-White: #fff;
   --Primary-Red: #e51236;
+  --Primary-Navy: #001a52;
   --Text-Dark-Grey: #4f4f4f;
+  --Grey: #f2f2f2;
 
   /* === BUTTONS === */
-  --Button-Font-Family: Inter;
   --Button-Size: 1rem;
   --Button-Font-weight: 500;
+
+  /* === TEXT === */
+  --Font-IBM-Plex-Mono: "IBM Plex Mono";
+  --Font-Inter: "Inter";
 }
