--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -1,6 +1,3 @@
-/* Inter font */
-@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-
 footer {
   display: flex;
   width: 90rem;
@@ -44,8 +41,8 @@ footer {
 }
 
 .footer-link-text {
-  color: #001a52;
-  font-family: Inter;
+  color: var(--Primary-Navy);
+  font-family: var(--Font-Inter);
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 700;
@@ -64,18 +61,18 @@ footer {
 .red-line {
   width: 100%;
   height: 0.125rem;
-  background-color: #ff5757;
+  background-color: var(--Primary-Red);
 }
 
 .footer-copy {
-  font-family: Inter;
+  font-family: var(--Font-Inter);
   font-size: 1rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
   letter-spacing: 0.05rem;
   text-transform: capitalize;
-  color: #4f4f4f;
+  color: var(--Text-Dark-Grey);
 }
 
 img {
