Created basic favorites structure

--- a/src/components/Swipe.css
+++ b/src/components/Swipe.css
@@ -200,7 +200,7 @@
     padding: 16px;
   }
   
-  .info-text {
+  .info-swipe-text {
     color: #4F4F4F !important;
     font-family: 'Inter', sans-serif !important;
     font-size: 16px !important;
