--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,18 +1,6 @@
-.input-container {
+.login-container {
+  margin: 5rem;
   display: flex;
-  align-items: center;
-  gap: 2.5rem;
-  align-self: stretch;
-}
-
-input {
-  display: flex;
-  width: 18.48rem;
-  height: 3rem;
-  border-radius: 0.25rem;
-  border: 1px solid var(--Grey);
-  background: var(--Grey);
-  padding: 0.5rem;
-  font-size: 1rem;
-  margin-top: 0;
+  flex-direction: column;
+  align-items: flex-start;
 }
