--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -4,3 +4,9 @@
   flex-direction: column;
   align-items: flex-start;
 }
+
+.input-container {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
