--- a/src/components/Swipe.css
+++ b/src/components/Swipe.css
@@ -158,8 +158,8 @@
 }
 
 .card-specialties p {
-  color: #4f4f4f;
-  font-family: "Inter", sans-serif;
+  color: var(--Text-Dark-Grey);
+  font-family: var(--Font-Inter);
   font-weight: 600;
   font-size: 16px;
   margin: 0 0 8px 0;
@@ -232,10 +232,10 @@
 .swipe-buttons {
   display: flex;
   justify-content: center;
-  gap: 32px;
-  margin-top: 16px;
+  gap: 3rem;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
   position: relative;
-  bottom: -20px;
 }
 
 .swipe-button {
@@ -250,6 +250,11 @@
   cursor: pointer;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease;
+}
+
+.back-button {
+  width: 4rem;
+  height: 4rem;
 }
 
 .swipe-button:hover {
