--- a/src/components/Swipe.css
+++ b/src/components/Swipe.css
@@ -19,8 +19,8 @@
 
 .card-container {
   width: 100%;
-  max-width: 800px; /* Increased card width */
-  height: 550px;
+  max-width: 80rem;
+  height: 35rem;
   position: relative;
   display: flex;
   justify-content: center;
@@ -29,10 +29,9 @@
 
 .swipe-card {
   position: absolute;
-  width: 76.875rem;
+  width: 66rem;
   height: 550px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
   cursor: grab;
 }
 
@@ -42,13 +41,13 @@
 
 .card {
   width: 100%;
-  height: 100%;
+  height: 38rem;
   display: flex;
   flex-direction: row;
 }
 
 .card-left {
-  width: 34.375rem;
+  width: 28rem;
   background-color: #4f4f4f;
 }
 
@@ -191,12 +190,6 @@
   font-weight: 600;
 }
 
-.info-box {
-  border: 1px solid #e0e0e0;
-  border-radius: 4px;
-  padding: 16px;
-}
-
 .info-swipe-text {
   color: #4f4f4f !important;
   font-family: "Inter", sans-serif !important;
@@ -231,14 +224,12 @@
   display: flex;
   justify-content: center;
   gap: 3rem;
-  margin-top: 4rem;
-  margin-bottom: 4rem;
   position: relative;
 }
 
 .swipe-button {
-  width: 70px; /* Increased button size */
-  height: 70px; /* Increased button size */
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
   background-color: white;
   border: none;
