--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -1,7 +1,7 @@
 header {
   display: flex;
   height: 4rem;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   padding: 0.75rem 1rem;
   gap: 52.75rem;
