--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -3,7 +3,7 @@ header {
   height: 4rem;
   justify-content: space-between;
   align-items: center;
-  padding: 0.75rem 1rem;
+  padding: 2.5rem 1rem;
   gap: 52.75rem;
 }
 
@@ -29,4 +29,5 @@ a {
   line-height: normal;
   letter-spacing: 0.05rem;
   text-decoration: none;
+  margin-right: 1.5rem;
 }
